@@ -1,3 +1,8 @@
+2004-10-07  Jan Beulich <jbeulich@novell.com>
+
+	* macro.c (macro_expand_body): When ELF, use .LL rather than LL as
+	prefix for symbol names generated from the LOCAL macro directive.
+
 2004-10-07  Tomer Levi  <Tomer.Levi@nsc.com>
 
 	* config/tc-crx.c (preprocess_reglist): Handle Co-processor
